# bookstore

./: .envrc.example  AGENTS.md  README.md  fetch_production.sh  main.py  pyproject.toml
.github/workflows/: check.yml  deploy.yml
books/: adj.py  admin.py  amazon_scraper.py  api.py  emails.py  models.py  openai.py  tests.py  urls.py  views.py  webhooks.py
books/fixtures/: books.json
books/management/commands/: cleanupcovers.py  setupsampledata.py
books/migrations/: 0001_initial.py  0002_book_is_available_book_price.py  0003_order.py  0004_book_cover_image.py  0005_alter_book_isbn.py  0006_remove_order_shipping_country.py  0007_order_shipping_country.py  0008_alter_book_isbn.py  0009_alter_order_book_isbn.py  0010_book_review.py  0011_alter_book_price.py  0012_book_created_at_book_updated_at.py  0013_tag_book_tags.py  0014_book_amazon_link.py  0015_book_worldofbooks_link.py
books/templates/books/: about.html  announcement_banner.html  base.html  batch_results.html  batch_upload.html  book_detail.html  book_form.html  book_list.html  checkout_cancel.html  checkout_success.html  layout-staff.html  layout.html  staff_amazon_add.html  staff_amazon_results.html  staff_batch_results.html  staff_batch_upload.html  staff_book_form.html  staff_layout.html  staff_style.css  style.css
bookstore/: settings.py  urls.py
deploy/: Caddyfile  bookstore.service  deploy.sh  provision.sh
