[project]
name = "sellbooks"
version = "0.1.0"
description = "bookstore software"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.2",
    "gunicorn>=25.1.0",
    "stripe>=14.4.0",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"] # line too long

[dependency-groups]
dev = [
    "djade>=1.9.0",
    "ruff>=0.15.4",
]
